# zs040

./: CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: linux.yml
docs/: CMakeLists.txt
example/: CMakeLists.txt  example.c  main.c
include/zs040/: zs040.h
src/: zs040.c
src/zs040/: zs040.c
tests/: CMakeLists.txt  test_main.cc  test_zs040_init.cc
